--- a/html/clavesytoken.html
+++ b/html/clavesytoken.html
@@ -11,7 +11,7 @@
     <meta name="description"
         content="Protege tus transacciones bancarias con nuestras claves y tokens de seguridad líderes en la industria.">
     <!--META KEYWORDS-->
-    <meta name="keywords"
+    <meta name="keywords" 
         content="Banco, dinero, claves, deposito, cajeros, contraseñas, cheques, dolar, dinero, token, cuentas">
     <!--META PHONE-->
     <meta name="telephone" content="+543510000000">
@@ -49,6 +49,20 @@
 
 <body>
     <header>
+
+           <!--menu-->
+           <div class="dropdown1">
+            <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Más</button>
+            <ul class="dropdown-menu">
+              <li><button class="dropdown-item" type="button" onclick= "window.location.href='../index.html' ">Inicio</button></li>
+              <li><button class="dropdown-item" type="button"  onclick= "window.location.href='clavesytoken.html' ">Crear claves y Token</button></li>
+              <li><button class="dropdown-item" type="button"  onclick= "window.location.href='tarjetas.html' ">Tarjetas</button></li>
+              <li><button class="dropdown-item" type="button"  onclick= "window.location.href='cuentas.html' ">Cuentas</button></li>
+              <li><button class="dropdown-item" type="button" onclick= "window.location.href='ayuda.html';">Ayuda</button></li>
+            </ul>
+          </div>
+
         <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Logo-TenesGalicia.jpg"
             alt="logo de la pagina" class="logogalicia" />
 
@@ -82,7 +96,9 @@
             <div class="tituloeimagen">
                 <h1>Usuario, claves<br>y Token Galicia</h1>
                 <p>Aprendé a configurarlos. Conocé cómo<br> recuperarlos si los olvidaste o bloqueaste.</p>
-                <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Hero-claves-2.jpg" alt="mano en celular" />
+                <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Hero-claves-2.jpg" alt="mano en celular" class="imgweb" />
+                <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/recursos/Hero-claves-2.jpg/jcr:content/renditions/Galicia-Mobile.jpeg" alt="mano en celular" class="imgmobi"/>
+
             </div>
 
             <h2>Cómo crear tu Usuario y Clave</h2>
