--- a/html/cuentas.html
+++ b/html/cuentas.html
@@ -49,6 +49,20 @@
 
 <body>
   <header>
+
+        <!--menu-->
+        <div class="dropdown1">
+          <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Más</button>
+          <ul class="dropdown-menu">
+            <li><button class="dropdown-item" type="button" onclick= "window.location.href='../index.html' ">Inicio</button></li>
+            <li><button class="dropdown-item" type="button"  onclick= "window.location.href='clavesytoken.html' ">Crear claves y Token</button></li>
+            <li><button class="dropdown-item" type="button"  onclick= "window.location.href='tarjetas.html' ">Tarjetas</button></li>
+            <li><button class="dropdown-item" type="button"  onclick= "window.location.href='cuentas.html' ">Cuentas</button></li>
+            <li><button class="dropdown-item" type="button" onclick= "window.location.href='ayuda.html';">Ayuda</button></li>
+          </ul>
+        </div>
+
     <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Logo-TenesGalicia.jpg"
       alt="logo de la pagina" class="logogalicia" />
 
@@ -82,7 +96,9 @@
         <h1>Abrir tu cuenta Galicia<br>tiene beneficios</h1>
         <p>Y disfrutá 6 meses gratis y promos para ahorrar 😉</p>
         <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/todas-las-cuentas/Banner-derivadoraCuentas.jpg"
-          alt="persona con celular" />
+          alt="persona con celular" class="imgweb" />
+          <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/cuentas/web/todas-las-cuentas/Banner-derivadoraCuentas.jpg/jcr:content/renditions/Galicia-Mobile.jpeg"
+          alt="persona con celular" class="imgmobi"/>
       </div>
 
       <h2>Encontrá la cuenta ideal para vos</h2>
