--- a/html/ayuda.html
+++ b/html/ayuda.html
@@ -46,6 +46,20 @@
 
 <body>
     <header>
+
+          <!--menu-->
+          <div class="dropdown1">
+            <button class="btn  dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Más</button>
+            <ul class="dropdown-menu">
+              <li><button class="dropdown-item" type="button" onclick= "window.location.href='../index.html' ">Inicio</button></li>
+              <li><button class="dropdown-item" type="button"  onclick= "window.location.href='clavesytoken.html' ">Crear claves y Token</button></li>
+              <li><button class="dropdown-item" type="button"  onclick= "window.location.href='tarjetas.html' ">Tarjetas</button></li>
+              <li><button class="dropdown-item" type="button"  onclick= "window.location.href='cuentas.html' ">Cuentas</button></li>
+              <li><button class="dropdown-item" type="button" onclick= "window.location.href='ayuda.html';">Ayuda</button></li>
+            </ul>
+          </div>
+          
         <img src="https://www.galicia.ar/content/dam/galicia/banco-galicia/personas/home/Logo-TenesGalicia.jpg"
             alt="logo de la pagina" class="logogalicia" />
 
